# uie_pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: dev.jsonl  relations_example.jsonl  train.jsonl
examples/: entity_extraction.py  entity_extraction_en.py  finetune_example.py  relation_extraction.py
src/uie_pytorch/: __init__.py  converter.py  dataset.py  extractor.py  finetune.py  model.py  trainer.py  utils.py
tests/: test_extractor.py  test_model.py
